# RMA_SB_IG

./: .gitignore  replay.py  rl_environment.yml  setup.py  train.py
models/: rma.py
rma_sb_ig/resources/robots/localhost/soto_2_1_description/: package.xml
rma_sb_ig/resources/robots/localhost/soto_2_1_description/config/: component_info.yaml  footprint.yaml  movement_config.yaml  safety_filter_config.yaml
rma_sb_ig/resources/robots/localhost/soto_2_1_description/meshes/: design_elements_link.STL
rma_sb_ig/resources/robots/localhost/soto_2_1_description/urdf/: description.xacro  design_elements.xacro  soto_2_1_description.xacro
rma_sb_ig/resources/robots/localhost/soto_backpack_5_1_description/: CMakeLists.txt  README.md  package.xml
rma_sb_ig/resources/robots/localhost/soto_backpack_5_1_description/config/: soto_backpack_5_1_description.yaml
rma_sb_ig/resources/robots/localhost/soto_backpack_5_1_description/meshes/: light_curtain_receiver_rear_link.STL
rma_sb_ig/resources/robots/localhost/soto_backpack_5_1_description/urdf/: description.xacro
rma_sb_ig/resources/robots/localhost/soto_backpack_layer_1_0_description/: package.xml
rma_sb_ig/resources/robots/localhost/soto_drive_base_2_1_description/: package.xml
rma_sb_ig/resources/robots/localhost/soto_drive_base_2_1_description/meshes/: base_link.STL  base_link_col.STL  caster_base_link.STL  imu_link.STL  laser_scanner_link.STL
rma_sb_ig/resources/robots/localhost/soto_drive_base_2_1_description/urdf/: description.xacro
rma_sb_ig/resources/robots/localhost/soto_klt_press_1_1_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rma_sb_ig/resources/robots/localhost/soto_klt_press_1_1_description/meshes/: press_base_link_col.STL  press_jaw_link.STL  press_jaw_link_col.STL
rma_sb_ig/resources/robots/localhost/soto_klt_press_1_1_description/meta_config/: drivetrain_configuration.yaml  urdf_configuration.yaml
rma_sb_ig/resources/robots/soto_2/soto_backpack_layer_1_0_description/: CHANGELOG.rst  CMakeLists.txt
rma_sb_ig/resources/robots/soto_2/soto_conveyor_gripper_1_2_description/: CMakeLists.txt  package.xml
rma_sb_ig/resources/robots/soto_2/soto_conveyor_gripper_1_2_description/config/: component_info.yaml  soto_conveyor_gripper_1_2_description.yaml
rma_sb_ig/resources/robots/soto_2/soto_conveyor_gripper_1_2_description/meshes/: gripper_base_link.STL  gripper_base_link_col.STL  gripper_base_x_link_col.STL  gripper_depth_camera_link.STL  gripper_y_left_link.STL  gripper_y_left_link_with_belt.STL  reflective_sensor.STL
rma_sb_ig/resources/robots/soto_2/soto_conveyor_gripper_1_2_description/meta_config/: drivetrain_configuration.yaml  urdf_configuration.yaml
rma_sb_ig/resources/robots/soto_2/soto_conveyor_gripper_1_2_description/urdf/: description.xacro
rma_sb_ig/resources/robots/soto_2/soto_drive_base_2_1_description/: CHANGELOG.rst  CMakeLists.txt
rma_sb_ig/resources/robots/soto_2/soto_drive_base_2_1_description/config/: diagnostics.yaml  soto_drive_base_2_1_description.yaml
rma_sb_ig/resources/robots/soto_2/soto_drive_base_2_1_description/meshes/: light_curtain_receiver_link.STL
rma_sb_ig/resources/robots/soto_2/soto_drive_base_2_1_description/meta_config/: drivetrain_configuration.yaml
rma_sb_ig/resources/robots/soto_2/soto_vertical_axis_2_1_description/: CMakeLists.txt  package.xml
rma_sb_ig/resources/robots/soto_2/soto_vertical_axis_2_1_description/config/: soto_vertical_axis_2_1_description.yaml
rma_sb_ig/resources/robots/soto_2/soto_vertical_axis_2_1_description/meshes/: manipulator_base_link.STL  vertical_axis_link.STL
rma_sb_ig/resources/robots/soto_2/soto_vertical_axis_2_1_description/urdf/: description.xacro
rma_sb_ig/resources/robots/soto_gripper/backpack_soto_4_0_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rma_sb_ig/resources/robots/soto_gripper/backpack_soto_4_0_description/config/: backpack_soto_4_0_description.yaml
rma_sb_ig/resources/robots/soto_gripper/backpack_soto_4_0_description/meshes/: backpack_light_curtain_emitter_link.STL  backpack_light_curtain_receiver_link.STL  charger_connector.STL  layer_base_link.STL  pivot_bar_link.STL
rma_sb_ig/resources/robots/soto_gripper/backpack_soto_4_0_description/meta_config/: drivetrain_configuration.yaml  urdf_configuration.yaml
rma_sb_ig/resources/robots/soto_gripper/backpack_soto_4_0_description/urdf/: backpack_layer.xacro  description.xacro
rma_sb_ig/resources/robots/soto_gripper/conveyor_gripper_1_0_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rma_sb_ig/resources/robots/soto_gripper/conveyor_gripper_1_0_description/config/: component_info.yaml  conveyor_gripper_1_0_description.yaml  safety_filter_config.yaml  safety_rules.yaml
rma_sb_ig/resources/robots/soto_gripper/conveyor_gripper_1_0_description/meshes/: conveyor_belt_left_barcode_camera.STL  conveyor_belt_left_base_link.STL  conveyor_belt_left_reflective_sensor.STL  conveyor_belt_right_base_link.STL  gripper_base_link.STL  gripper_base_x_link.STL  gripper_casing_link.STL  gripper_depth_camera_link.STL  gripper_lateral_frame_link.STL  gripper_y_left_link.STL  gripper_y_right_dist_x_sensor.STL  gripper_y_right_link.STL
rma_sb_ig/resources/robots/soto_gripper/conveyor_gripper_1_0_description/meta_config/: drivetrain_configuration.yaml  urdf_configuration.yaml
rma_sb_ig/resources/robots/soto_gripper/conveyor_gripper_1_0_description/urdf/: belt_left.xacro  belt_right.xacro  description.xacro  gripper_base.xacro  gripper_lateral_frame.xacro  gripper_rotate.xacro
rma_sb_ig/resources/robots/soto_gripper/drive_base_soto_2_0_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rma_sb_ig/resources/robots/soto_gripper/klt_press_1_0_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rma_sb_ig/resources/robots/soto_gripper/neobotix_pcw_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rma_sb_ig/resources/robots/soto_gripper/soto_2_0_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rma_sb_ig/resources/robots/soto_gripper/vertical_axis_soto_2_0_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+653 files in other folders)
