<?xml version="1.0"?>
<package format="2">
  <name>soto_backpack_5_1_description</name>
  <version>0.8.0</version>
  <description>
    <p>Description package for Backpack SOTO 5.1</p>
    <p>This package contains configuration data, 3D models and launch files for Backpack Soto 5.1</p>
  </description>

  <author email="schimke@magazino.eu">Benjamin Schimke</author>
  <maintainer email="lamprianidis@magazino.eu">Nick Lamprianidis</maintainer>

  <license>Magazino</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hardware_configuration_generator</build_depend>
  <build_depend>hlls_build_utilities</build_depend>
  <exec_depend>soto_backpack_layer_1_0_description</exec_depend>
  <exec_depend>urdf_utils</exec_depend>
</package>
