<package format="2">
  <name>soto_drive_base_2_1_description</name>
  <version>0.6.0</version>
  <description>
    <p>URDF Description package for soto_drive_base_2_1_description</p>
    <p>This package contains configuration data, 3D models and launch files for soto_drive_base_2_1</p>
  </description>

  <author email="lamprianidis@magazino.eu">Nick Lamprianidis</author>
  <maintainer email="lamprianidis@magazino.eu">Nick Lamprianidis</maintainer>
  
  <license>Magazino</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hlls_build_utilities</build_depend>
  <exec_depend>urdf_utils</exec_depend>
</package>
