<?xml version="1.0"?>
<package format="2">
  <name>soto_conveyor_gripper_1_2_description</name>
  <version>0.20.0</version>
  <description>
    <p>URDF description package for soto_conveyor_gripper_1_2_description</p>
    <p>This package contains configuration data, 3D models and launch files for soto_conveyor_gripper_1_2</p>
  </description>

  <author email="franke@magazino.eu">Kai Franke</author>
  <maintainer email="lamprianidis@magazino.eu">Nick Lamprianidis</maintainer>

  <license>Magazino</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hardware_configuration_generator</build_depend>
  <build_depend>hlls_build_utilities</build_depend>
  <exec_depend>urdf_utils</exec_depend>
</package>
