<?xml version="1.0"?>
<package format="2">
  <name>backpack_soto_4_0_description</name>
  <version>0.26.0</version>
  <description>
    <p>URDF description package for backpack_soto_4_0_description</p>
    <p>This package contains configuration data, 3D models and launch files for backpack_soto_4_0_description</p>
  </description>

  <author email="smith@magazino.eu">Connor Smith</author>
  <maintainer email="lamprianidis@magazino.eu">Nick Lamprianidis</maintainer>

  <license>Commercial</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend version_gte="0.22.0">urdf_utils</exec_depend>
</package>
