<?xml version="1.0"?>
<package format="2">
  <name>soto_2_0_description</name>
  <version>0.26.0</version>
  <description>
    <p>URDF description package for Soto 2.0</p>
    <p>This package contains the top level xacro file and launch files</p>
  </description>

  <author email="smith@magazino.eu">Connor Smith</author>
  <maintainer email="lamprianidis@magazino.eu">Nick Lamprianidis</maintainer>

  <license>Commercial</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>cman</exec_depend>
  <exec_depend>urdf_utils</exec_depend>

  <!-- components of Soto 2.0: -->
  <exec_depend>drive_base_soto_2_0_description</exec_depend>
  <exec_depend>vertical_axis_soto_2_0_description</exec_depend>
  <exec_depend>conveyor_gripper_1_0_description</exec_depend>
  <exec_depend>backpack_soto_4_0_description</exec_depend>
  <exec_depend>klt_press_1_0_description</exec_depend>
</package>
