<?xml version="1.0"?>
<package format="2">
  <name>vertical_axis_soto_2_0_description</name>
  <version>0.26.0</version>
  <description>
    <p>URDF Description package for vertical_axis_soto_2_0</p>
    <p>This package contains configuration data, 3D models and launch files for vertical_axis_soto_2_0</p>
  </description>

  <author email="smith@magazino.eu">Connor Smith</author>
  <maintainer email="lamprianidis@magazino.eu">Nick Lamprianidis</maintainer>

  <license>Commercial</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf_utils</exec_depend>
</package>
