<?xml version="1.0"?>
<package>
    <name>box_tracking_msgs</name>
    <version>0.1.0</version>
    <description>Messages and action definitions to be used as interface to box tracking</description>

    <maintainer email="meinzer@magazino.eu">Dominik Meinzer</maintainer>
    <maintainer email="maerz@magazino.eu">Michael März</maintainer>

    <license>proprietary</license>

    <author email="meinzer@magazino.eu">Dominik Meinzer</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>moveit_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>moveit_msgs</run_depend>
    <run_depend>std_msgs</run_depend>

</package>
