<?xml version="1.0"?>
<package format="2">
    <name>bt_manipulation_msgs</name>
    <version>1.7.0</version>
    <description>Messages and action definitions to be used as interface to the high-level executive.</description>

    <author email="maerz@magazino.eu">Michael Maerz</author>
    <maintainer email="maerz@magazino.eu">Michael Maerz</maintainer>

    <license>proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>moveit_msgs</build_depend>
    <build_depend>order_error_msgs</build_depend>

    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>moveit_msgs</exec_depend>
    <exec_depend>order_error_msgs</exec_depend>
</package>
