<?xml version="1.0"?>
<package>
  <name>canopen_interface</name>
  <version>0.19.0</version>
  <description>Acts as a deamon to handle CAN messages</description>

  <maintainer email="schimke@magazino.eu">Benjamin Schimke</maintainer>

  <license>Private</license>

  <author email="franke@magazino.eu">Kai Franke</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>
