<?xml version="1.0"?>
<package>
    <name>order_error_msgs</name>
    <version>1.10.0</version>
    <description>Messages and action definitions to be used as interface to the high-level executive.</description>

    <maintainer email="gemignani@magazino.eu">Guglielmo Gemignani</maintainer>

    <license>proprietary</license>

    <author email="tenorth@magazino.eu">Moritz Tenorth</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>moveit_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>

    <run_depend>actionlib_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>moveit_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>visualization_msgs</run_depend>
</package>
